# llmpsycho

./: .gitignore  .python-version  README.md  pyproject.toml
docs/: convergence_first_budget_update.md  examples_end_to_end_workflows.md  operations_ingestion_and_history.md  profile_interpretation_guide.md  profile_studio_overview.md  query_lab_ab_guide.md  stage2_explainable_alignment_ux.md  use_cases_routing_and_alignment.md
examples/: hypothetical_run.py  run_anthropic.py  run_openai.py  run_profile_studio_api.py
schemas/: profile_run.schema.json
src/adaptive_profiler/: __init__.py  config.py  diagnostics.py  engine.py  item_bank.py  mirt.py  scoring.py  selector.py  simulate.py  traits.py  types.py
src/adaptive_profiler/adapters/: __init__.py  anthropic.py  base.py  openai.py
src/llmpsycho.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/profile_studio_api/: __init__.py  alignment_eval.py  deps.py  ingestion_watcher.py  interventions.py  jobs.py  main.py  model_catalog.py  models.py  profile_explain.py  repository.py  routes_ingestion.py  routes_meta.py  routes_profiles.py  routes_query_lab.py  routes_runs.py  services.py  settings.py  validation.py
tests/: test_acceptance.py  test_config.py  test_engine_basic.py  test_profile_model_catalog.py  test_profile_studio_alignment_eval.py  test_profile_studio_api.py  test_profile_studio_ingestion.py  test_profile_studio_interventions.py  test_profile_studio_repository.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/lib/: api.ts  types.ts
(+30 files in other folders)
