[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmpsycho"
version = "0.1.0"
description = "Adaptive low-cost psychometric profiling for LLMs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "llmpsycho" }]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.0"]
studio = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "jsonschema>=4.22",
]
all = [
    "anthropic>=0.39",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "jsonschema>=4.22",
]

[tool.setuptools.packages.find]
where = ["src"]
